# CoPL

./: .gitignore  README.md  copl.py  dune-project
exec/compare_nat1/: dune
exec/compare_nat2/: lexer.mll  parser.mly
exec/compare_nat3/: dune  lexer.mll  parser.mly
exec/eval_ml1/: dune  lexer.mll  main.ml  parser.mly
exec/eval_ml2/: dune  lexer.mll  main.ml  parser.mly
exec/eval_ml3/: dune  lexer.mll  main.ml  parser.mly
exec/eval_ml4/: dune  lexer.mll  main.ml  parser.mly
exec/eval_ml5/: dune  lexer.mll  main.ml  parser.mly
exec/eval_nameless_ml3/: dune  lexer.mll  main.ml  parser.mly
exec/eval_nat_exp/: dune  lexer.mll  main.ml  parser.mly
exec/nameless_ml3/: dune  lexer.mll  main.ml  parser.mly
exec/nat/: dune  lexer.mll  main.ml  parser.mly
exec/poly_typing_ml4/: dune  lexer.mll  main.ml  parser.mly
exec/reduce_nat_exp/: dune  lexer.mll  main.ml  parser.mly
exec/typing_ml4/: dune  main.ml  parser.mly
exec/while/: dune  lexer.mll  main.ml  parser.mly
input/: dune  nat.ml
input/compare_nat/: compare_nat1_1.ml  compare_nat1_2.ml  compare_nat2_1.ml  compare_nat2_2.ml  compare_nat3_1.ml  compare_nat3_2.ml  dune
input/compare_nat1/: dune  main.ml  parser.mly
input/compare_nat2/: dune  main.ml  parser.mly
input/compare_nat3/: dune  main.ml  parser.mly
input/eval_ml/: dune  eval_ml1_1.ml  eval_ml1_2.ml  eval_ml1_3.ml  eval_ml1_4.ml  eval_ml1_5.ml  eval_ml1_6.ml
input/eval_nat_exp/: dune  eval_nat_exp_1.ml  eval_nat_exp_2.ml  eval_nat_exp_3.ml  eval_nat_exp_4.ml  eval_nat_exp_5.ml  eval_nat_exp_6.ml
input/nat/: dune  nat_1.ml  (+8 more)
(+43 files in other folders)
